Stanford and TUM Professors Discuss Sciencepreneurship
February 17, 2025
During the recent Munich Security Conference 2025, a Sciencepreneurship discussion was held featuring Professors William Chueh and Jimmy Chen from Stanford University, alongside Professor Jennifer L.M. Rupp from TUM. The panel focused on the intersection of scientific research and entrepreneurial ventures, emphasizing collaborative innovation between the two institutions. The event was part of the TUM Speakers Series.
<small><img src="sicherheitskonf.jpg" class="" style="width: 600px;"></small>

Battery Start-up Incubator Launches at TUM
January 16, 2025
TUM has launched the Battery Start-up Incubator (BaStI) with €3.3 million in funding from BMBF to accelerate battery innovations and reduce import dependence. Led by Prof. Jennifer L.M. Rupp, BaStI is part of TUM Venture Labs and supports start-ups nationwide. <a href="https://www.tum.de/en/news-and-events/all-news/press-releases/details/battery-start-up-incubator-launches-at-tum" target="_blank">Read more</a>.

Interview: e-conversion Cluster Innovates Energy Transition Solutions
January 10, 2025
Prof. Jennifer L.M. Rupp (TUM) and Prof. Thomas Bein (LMU) discussed groundbreaking advancements in energy conversion, including solar batteries that combine photovoltaic and storage components and the emerging field of optoionics. With over 930 publications and seven startups, the e-conversion cluster exemplifies Munich's leadership in interdisciplinary approaches to renewable energy innovation. The interview can be read <a href="https://www.tum.de/en/news-and-events/all-news/press-releases/details/creative-ideas-for-the-energy-transition" target="_blank">here</a>.

Prof. Rupp Leads the World's First Center for Solar Batteries
November 27, 2024