@@ -226,6 +226,7 @@
 
 
 
+
 <!-- START NEWS BAR -->
 <div class="container-fluid p-0 news-bar text-white">
     <div class="row p-0 m-0">
@@ -233,19 +234,19 @@
             <div class="ecm-primary font-weight-bold text-center align-middle"> NEWS </div>
         </div>
         <div class="col-sm p-1 bg-lessdark">
-            <a class="text-smaller text-white font-weight-light" href="news/index.html#news1"> Stanford and TUM Professors Discuss Sciencepreneurship </a>
+            <a class="text-smaller text-white font-weight-light" href="news/index.html#news1"> Investorgroup InnoEnergy Leads Pre-Seed Investment in the Chair´s company Qkera </a>
+            <br>
+            <small class="ecm-primary font-italic"> October 8, 2025 </small>
+        </div>
+        <div class="col-sm p-1 bg-dark">
+            <a class="text-smaller text-white font-weight-light" href="news/index.html#news2"> Stanford and TUM Professors Discuss Sciencepreneurship </a>
             <br>
             <small class="ecm-primary font-italic"> February 17, 2025 </small>
         </div>
-        <div class="col-sm p-1 bg-dark">
-            <a class="text-smaller text-white font-weight-light" href="news/index.html#news2"> Battery Start-up Incubator Launches at TUM </a>
+        <div class="col-sm p-1 bg-lessdark">
+            <a class="text-smaller text-white font-weight-light" href="news/index.html#news3"> Battery Start-up Incubator Launches at TUM </a>
             <br>
             <small class="ecm-primary font-italic"> January 16, 2025 </small>
-        </div>
-        <div class="col-sm p-1 bg-lessdark">
-            <a class="text-smaller text-white font-weight-light" href="news/index.html#news3"> Interview: e-conversion Cluster Innovates Energy Transition Solutions </a>
-            <br>
-            <small class="ecm-primary font-italic"> January 10, 2025 </small>
         </div>
     </div>
 </div>
