@@ -104,10 +104,11 @@
     <h6 class="mb-1">Investorgroup InnoEnergy Leads Pre-Seed Investment in the Chair´s company Qkera </h6> 
     <div class='font-weight-light'>October 8, 2025</div>
     <p><small>Investorgroup InnoEnergy Leads Pre-Seed Investment in the Chair´s company Qkera (<a href="https://www.qkera.com/" target="_blank">Qkera.com</a>) to Accelerate Next-Generation Battery Commercialisation. <a href="https://innoenergy.com/news-resources/innoenergy-leads-pre-seed-investment-in-qkera-to-accelerate-next-generation-battery-commercialisation/educe" target="_blank">Read more</a>.</small></p>
+
 </td></tr>
 
 <tr><td>
-    <a class="anchor" id="news1"></a>
+    <a class="anchor" id="news2"></a>
     <h6 class="mb-1">Stanford and TUM Professors Discuss Sciencepreneurship </h6> 
     <div class='font-weight-light'>February 17, 2025</div>
     <p><small>During the recent Munich Security Conference 2025, a Sciencepreneurship discussion was held featuring Professors William Chueh and Jimmy Chen from Stanford University, alongside Professor Jennifer L.M. Rupp from TUM. The panel focused on the intersection of scientific research and entrepreneurial ventures, emphasizing collaborative innovation between the two institutions. The event was part of the TUM Speakers Series.</small></p>
@@ -116,7 +117,7 @@
 </td></tr>
 
 <tr><td>
-    <a class="anchor" id="news2"></a>
+    <a class="anchor" id="news3"></a>
     <h6 class="mb-1">Battery Start-up Incubator Launches at TUM </h6> 
     <div class='font-weight-light'>January 16, 2025</div>
     <p><small>TUM has launched the Battery Start-up Incubator (BaStI) with €3.3 million in funding from BMBF to accelerate battery innovations and reduce import dependence. Led by Prof. Jennifer L.M. Rupp, BaStI is part of TUM Venture Labs and supports start-ups nationwide. <a href="https://www.tum.de/en/news-and-events/all-news/press-releases/details/battery-start-up-incubator-launches-at-tum" target="_blank">Read more</a>.</small></p>
@@ -124,7 +125,7 @@
 </td></tr>
 
 <tr><td>
-    <a class="anchor" id="news3"></a>
+    
     <h6 class="mb-1">Interview: e-conversion Cluster Innovates Energy Transition Solutions </h6> 
     <div class='font-weight-light'>January 10, 2025</div>
     <p><small>Prof. Jennifer L.M. Rupp (TUM) and Prof. Thomas Bein (LMU) discussed groundbreaking advancements in energy conversion, including solar batteries that combine photovoltaic and storage components and the emerging field of optoionics. With over 930 publications and seven startups, the e-conversion cluster exemplifies Munich's leadership in interdisciplinary approaches to renewable energy innovation. The interview can be read <a href="https://www.tum.de/en/news-and-events/all-news/press-releases/details/creative-ideas-for-the-energy-transition" target="_blank">here</a>.</small></p>
